# DEngine

./: CMakeLists.txt  README.md  todo.txt
assets/: base.fs  base.vs  base_scene.json
assets/shaders/: base.fs  base.vs  defered_shading.fs  defered_shading.vs  g_buffer.fs  g_buffer.vs
ext/glad/include/glad/: glad.h
ext/glad/src/: glad.c
src/: main.cpp
src/core/: CVar.cpp  CVar.h  Camera.cpp  Camera.h  Console.cpp  Console.h  Engine.cpp  Engine.h  Input.cpp  Input.h  Logger.cpp  Logger.h  ResManager.cpp  ResManager.h  Scene.cpp  Scene.h  SceneLoader.cpp  Session.cpp  Session.h  WindowManager.cpp  WindowManager.h
src/renderer/: BaseLoader.cpp  BaseLoader.h  GBuffer.cpp  GBuffer.h  Light.cpp  Light.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Quad.cpp  Quad.h  RenderEngine.cpp  RenderEngine.h  RendererBase.h  RendererImpl.cpp  RendererImpl.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  Transform.cpp  Transform.h
